# lenny-clone

./: .gitignore  .vercelignore  Design.md  Email.md  Implementation.md  README.md  extract_style_nim.py  main.py  pyproject.toml  requirements.txt  test_llm.py  test_persona.py
agent/: chroma_retriever.py  llm_client.py  persona.py  pyproject.toml  rag.py  retriever.py
app/: main.py  requirements.txt  streamlit_app.py  vercel_app.py
app/.streamlit/: config.toml
chroma_db/3ce23369-f89c-443d-9281-33f64587774a/: index_metadata.pickle
chroma_db/537718e7-b2ec-49b1-b5fc-6c14910e8b5a/: index_metadata.pickle
chroma_db/5c0cdacb-d742-4714-bbbd-7644d9c1a375/: index_metadata.pickle
chroma_db/644a347c-86a9-4cc4-9169-4d3a7b74ff99/: index_metadata.pickle
chroma_db/87a7a4ba-8a22-416f-9041-9efdd351eae9/: index_metadata.pickle
chroma_db/a466da26-526c-4fdf-b006-e58d5c611e2b/: index_metadata.pickle
cli/: chat.py  requirements.txt
evaluation/: eval.py  evaluation.py  metrics.py  pyproject.toml
ingestion/: check_versions.py  clean_transcripts.py  extract_linkedin.py  extract_youtube.py  load_chroma.py  load_qdrant.py  process_data.py  pyproject.toml  run_ingestion.py
